--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "add_comment" = "Напишите комментарий";
 "add_reply" = "Напишите ответ";
 "comment_is_deleted" = "[Комментарий удален]";
+"comment_is_claimed" = "[Комментарий скрыт]";
 "comment_is_banned" = "[Комментарий заблокирован из-за жалоб]";
 "pseudonym" = "Аноним#";
 "pseudonym_placeholder" = "Ваш псевдоним";
