--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -352,8 +352,6 @@
 "instagram_link" = "Instagram link";
 "completed" = "Сompleted";
 "preferences" = "My preferences:";
-
-//"points" = "Points";
 "top_up" = "Top up";
 "interests" = "Interests";
 "social_media_help" = "Attach a profile on a social network so that other users can communicate with you (optional)";
@@ -376,7 +374,7 @@
 "languages" = "Languages";
 "default_locale" = "Interface";
 "locales" = "Content";
-"content_language" = "Content language";
+"content_language" = "Content languages";
 "content_language_hint" = "Content will be provided in selected languages";
 "about_app" = "About app";
 "terms_privacy_policy" = "Terms, privacy policy";
@@ -529,3 +527,6 @@
 "filter_rated" = "most rated";
 "filter_own" = "own";
 "filter_watchlist" = "watchlist";
+
+// Banners & popups
+"banner_share_link_expired" = "Link has expired";
